<resources>
    <string name="app_name">SQLiteOperaciones</string>
    <string name="usuario_nombre">Nombre del Usuario</string>
    <string name="txt_usuario">Introduzca el Nombre</string>
    <string name="usuario_password">Contraseña</string>
    <string name="txt_password">Introduzca la Contraseña</string>
    <string name="btn_agregar_usuario">Usuario</string>
    <string name="btn_ver_datos">Datos</string>
    <string name="txt_nombre_actual">Nombre Actual</string>
    <string name="txt_nombre_nuevo">Nombre Nuevo</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="txt_nombre_eliminar">Introduzca Nombre para Eliminar</string>
    <string name="btn_eliminar">Eliminar</string>
</resources>