<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="2dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/usuario_nombre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usuarioNombre"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="@string/txt_usuario"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/usuario_password"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioNombre" />

    <EditText
        android:id="@+id/usuarioPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnAgregarUsuario"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/verde"
        android:onClick="agregarUsuario"
        android:text="@string/btn_agregar_usuario"
        app:icon="@drawable/baseline_add_24"
        app:layout_constraintBottom_toTopOf="@+id/btnActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioPassword"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/verDatos"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/celeste"
        android:onClick="verDatos"
        android:text="@string/btn_ver_datos"
        app:icon="@drawable/baseline_view_list_24"
        app:layout_constraintBottom_toTopOf="@+id/btnEliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioPassword"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/naranja"
        android:text="@string/btn_actualizar"
        app:icon="@drawable/baseline_refresh_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregarUsuario" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="59dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/btn_eliminar"
        app:icon="@drawable/baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnActualizar"
        app:layout_constraintTop_toBottomOf="@+id/verDatos" />
</androidx.constraintlayout.widget.ConstraintLayout>